--- a/.github/workflows/ghas-csv-data.yml
+++ b/.github/workflows/ghas-csv-data.yml
@@ -9,7 +9,7 @@ permissions:
   security-events: read
 
 jobs:
-  make-csv:
+  make-csvs:
     runs-on: ubuntu-latest
     steps:
       - name: CSV export
@@ -24,3 +24,32 @@ jobs:
           name: ghas-csv-data
           path: ${{ github.workspace }}/*.csv
           if-no-files-found: error
+  flat_data:
+    runs-on: ubuntu-latest
+    needs: make-csvs
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v3
+      - name: Download CSVs
+        uses: actions/download-artifact@v3
+        with:
+          name: ghas-data
+      - name: Tiny http server moment
+        run: |
+          docker run -d -p 8000:80 --read-only -v $(pwd)/nginx-cache:/var/cache/nginx -v $(pwd)/nginx-pid:/var/run -v $(pwd):/usr/share/nginx/html:ro nginx
+          sleep 10
+      - name: Flat the code scanning alerts
+        uses: githubocto/flat@v3
+        with:
+          http_url: http://localhost:8000/cs_list.csv
+          downloaded_filename: cs_list.csv
+      - name: Flat the secret scanning alerts
+        uses: githubocto/flat@v3
+        with:
+          http_url: http://localhost:8000/secrets_list.csv
+          downloaded_filename: secrets_list.csv
+      - name: Flat the dependabot alerts
+        uses: githubocto/flat@v3
+        with:
+          http_url: http://localhost:8000/dependabot_list.csv
+          downloaded_filename: dependabot_list.csv
