--- a/.github/workflows/ghas-csv-data.yml
+++ b/.github/workflows/ghas-csv-data.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Download CSVs
         uses: actions/download-artifact@v3
         with:
-          name: ghas-data
+          name: ghas-csv-data
       - name: Tiny http server moment
         run: |
           docker run -d -p 8000:80 --read-only -v $(pwd)/nginx-cache:/var/cache/nginx -v $(pwd)/nginx-pid:/var/run -v $(pwd):/usr/share/nginx/html:ro nginx
