--- a/.github/workflows/ghas-csv-data.yml
+++ b/.github/workflows/ghas-csv-data.yml
@@ -24,7 +24,7 @@ jobs:
           name: ghas-csv-data
           path: ${{ github.workspace }}/*.csv
           if-no-files-found: error
-  flat_data:
+  flat-data:
     runs-on: ubuntu-latest
     needs: make-csvs
     steps:
