--- a/.github/workflows/ghas-csv-data.yml
+++ b/.github/workflows/ghas-csv-data.yml
@@ -27,6 +27,8 @@ jobs:
   flat-data:
     runs-on: ubuntu-latest
     needs: make-csvs
+    permissions:
+      contents: write
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
